// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show task enable should enable task with general context in subtasks: 2PeJ1GS5SrNdC7DXMv8nHAQNfire6UYB-err 1`] = `Array []`;

exports[`show task enable should enable task with general context in subtasks: 2PeJ1GS5SrNdC7DXMv8nHAQNfire6UYB-exit 1`] = `Array []`;

exports[`show task enable should enable task with general context in subtasks: 2PeJ1GS5SrNdC7DXMv8nHAQNfire6UYB-out 1`] = `
Array [
  Array [
    "◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G◼ This task will execute.
◼ This task will show subtasks.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will show subtasks.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will show subtasks.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will show subtasks.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will show subtasks.
  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will show subtasks.
  ◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will show subtasks.
  ❯ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will show subtasks.
  ✔ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
✔ This task will show subtasks.
  ✔ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
✔ This task will show subtasks.
  ✔ This task will execute. 
",
  ],
]
`;

exports[`show task enable should enable task with general context: JeLYvYj1f4ddSjgwkUp7Nr8hICHLdEsU-err 1`] = `Array []`;

exports[`show task enable should enable task with general context: JeLYvYj1f4ddSjgwkUp7Nr8hICHLdEsU-exit 1`] = `Array []`;

exports[`show task enable should enable task with general context: JeLYvYj1f4ddSjgwkUp7Nr8hICHLdEsU-out 1`] = `
Array [
  Array [
    "◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G◼ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G✔ This task will execute. 
",
  ],
]
`;
